# bpp

./: README.md  config.json  pyproject.toml  requirements.txt
bpp/: params.py  qubo.py  visu.py
demo/: optim.ipynb  qubo.ipynb
tests/: test_params.py  test_qubo.py
tests/data/: test_config.json
