[tool.poetry]
name = "bpp"
version = "0.1.0"
description = ""
authors = ["sacklippe <jonas.kleppich@voltfang.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
dwave-system = "^1.21.0"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
