[tool.poetry]
name = "bpp"
version = "0.1.0"
description = ""
authors = ["sacklippe <jonas.kleppich@voltfang.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
dwave-system = "^1.21.0"
ipykernel = "^6.26.0"
dimod = "^0.12.13"
dwave-neal = "^0.6.0"
ipympl = "^0.9.3"
optuna = "^3.5.0"
optuna-dashboard = "^0.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = {extras = ["jupyter"], version = "^23.12.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
